Update README_T4_Java_Maven_Windows.md
Fixing the ReadMe file.